--- a/hostinger-deployment/forecasting.html
+++ b/hostinger-deployment/forecasting.html
@@ -55,14 +55,14 @@
                     🧠 AI EXPANSION PREDICTOR 🧠
                 </h1>
                 <p class="text-tf-light text-xl mb-2">
-                    Machine learning forecasts for TerraFusion conquest
+                    Machine learning forecasts for TerraFusion conquest across 24 counties in 4 states
                 </p>
                 <div class="flex justify-center items-center gap-4">
                     <div class="bg-tf-transcend/20 border border-tf-transcend/30 px-4 py-2 rounded-lg">
-                        <span class="text-tf-transcend font-bold">🎯 Confidence: 94.3%</span>
+                        <span class="text-tf-transcend font-bold">🎯 24 Counties Ready • 94.3% Confidence</span>
                     </div>
                     <span class="text-tf-accent">|</span>
-                    <span class="text-tf-light/70">Updated 12 seconds ago</span>
+                    <span class="text-tf-light/70">$320M+ Revenue Potential</span>
                 </div>
             </div>
         </div>
@@ -158,8 +158,8 @@
                         <div class="p-4 bg-tf-dark/30 rounded-lg border border-tf-transcend/10">
                             <div class="flex justify-between items-start mb-3">
                                 <div>
-                                    <h3 class="text-xl font-bold text-tf-light">Washington</h3>
-                                    <p class="text-sm text-tf-accent">14 counties with live demo data ready</p>
+                                    <h3 class="text-xl font-bold text-tf-light">🌲 Washington State</h3>
+                                    <p class="text-sm text-tf-accent">14 of 24 counties ready with live demo data</p>
                                 </div>
                                 <span class="bg-tf-success/20 text-tf-success border border-tf-success/30 px-3 py-1 rounded-full text-sm">95% Confidence</span>
                             </div>
@@ -193,8 +193,8 @@
                         <div class="p-4 bg-tf-dark/30 rounded-lg border border-tf-transcend/10">
                             <div class="flex justify-between items-start mb-3">
                                 <div>
-                                    <h3 class="text-xl font-bold text-tf-light">Florida</h3>
-                                    <p class="text-sm text-tf-accent">4 counties with live demo data ready</p>
+                                    <h3 class="text-xl font-bold text-tf-light">🌴 Florida</h3>
+                                    <p class="text-sm text-tf-accent">4 of 24 counties ready with live demo data</p>
                                 </div>
                                 <span class="bg-tf-warning/20 text-tf-warning border border-tf-warning/30 px-3 py-1 rounded-full text-sm">88% Confidence</span>
                             </div>
@@ -228,8 +228,8 @@
                         <div class="p-4 bg-tf-dark/30 rounded-lg border border-tf-transcend/10">
                             <div class="flex justify-between items-start mb-3">
                                 <div>
-                                    <h3 class="text-xl font-bold text-tf-light">Texas</h3>
-                                    <p class="text-sm text-tf-accent">3 counties with live demo data ready</p>
+                                    <h3 class="text-xl font-bold text-tf-light">🤠 Texas</h3>
+                                    <p class="text-sm text-tf-accent">3 of 24 counties ready with live demo data</p>
                                 </div>
                                 <span class="bg-tf-warning/20 text-tf-warning border border-tf-warning/30 px-3 py-1 rounded-full text-sm">82% Confidence</span>
                             </div>
@@ -263,8 +263,8 @@
                         <div class="p-4 bg-tf-dark/30 rounded-lg border border-tf-transcend/10">
                             <div class="flex justify-between items-start mb-3">
                                 <div>
-                                    <h3 class="text-xl font-bold text-tf-light">California</h3>
-                                    <p class="text-sm text-tf-accent">3 counties with live demo data ready</p>
+                                    <h3 class="text-xl font-bold text-tf-light">☀️ California</h3>
+                                    <p class="text-sm text-tf-accent">3 of 24 counties ready with live demo data</p>
                                 </div>
                                 <span class="bg-tf-warning/20 text-tf-warning border border-tf-warning/30 px-3 py-1 rounded-full text-sm">85% Confidence</span>
                             </div>
